Fixed spacing

--- a/style.css
+++ b/style.css
@@ -331,7 +331,10 @@ section .container {
     }
 
     main section {
-        margin: 2rem auto;
+        /* margin: 2rem auto; */
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
     }
 
     section .container {
@@ -396,6 +399,12 @@ section .container {
 
     section .container {
         padding: 5%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    body {
+        font-size: 12px;
     }
 }
 
